pre-ui updates
